--- a/css/movie-content.css
+++ b/css/movie-content.css
@@ -1,3 +1,12 @@
+/* to the body element */
+.noscroll { overflow: hidden; }
+
+@media (min-device-width: 1025px) {
+  .noscroll { 
+      padding-right: 15px;
+  }
+}
+
 /* The Overlay (background) */
 .overlay {
     /* Height & width depends on how you want to reveal the overlay (see JS below) */    
@@ -11,15 +20,17 @@
     background-color: rgba(0,0,0, 0.95); /* Black w/opacity */
     overflow-x: hidden; /* Disable horizontal scroll */
     transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
+    overflow-y: scroll;
 }
 
 /* Position the content inside the overlay */
 .overlay-content {
-    position: relative;
+    position: absolute;
     top: 10%; /* 25% from the top */
     width: 100%; /* 100% width */
     text-align: center; /* Centered text/links */
     margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
+    overflow-y: scroll;
 }
 
 .overlay-font{
@@ -45,8 +56,8 @@
 /* Position the close button (top right corner) */
 .overlay .closebtn {
     position: absolute;
-    top: 35px;
-    right: 45px;
+    top: 0px;
+    right: 10px;
     font-size: 60px;
     z-index: 3;
 }
@@ -56,31 +67,33 @@
     .overlay a {font-size: 20px}
     .overlay .closebtn {
         font-size: 40px;
-        top: 35px;
-        right: 35px;
+        top: 0px;
+        right: 10px;
         z-index: 2;
     }
 }
+[aria-hidden="true"] {    
+    transition: opacity 1s, z-index 0s 1s;
+    width: 100vw;
+    z-index: -1; 
+    opacity: 0;  }
+  
+  [aria-hidden="false"] {  
+    transition: opacity 1s;
+    width: 100%; 
+    z-index: 1;  
+    opacity: 1; 
+  }
 
 h2 {
-    font-size: 17px;
+    font-size: 22px;
     word-break: break-word;
-}
-
-#trailer .modal-dialog {
-    margin-top: 200px;
-    width: 640px;
-    height: 480px;
 }
 .hanging-close {
     position: absolute;
     top: -12px;
     right: -12px;
     z-index: 9001;
-}
-#trailer-video {
-    width: 100%;
-    height: 100%;
 }
 .movie-tile {
     margin-bottom: 20px;
@@ -89,19 +102,6 @@ h2 {
 .movie-tile:hover {
     background-color: #EEE;
     cursor: pointer;
-}
-.scale-media {
-    padding-bottom: 56.25%;
-    position: relative;
-}
-.scale-media iframe {
-    border: none;
-    height: 100%;
-    position: absolute;
-    width: 100%;
-    left: 0;
-    top: 0;
-    background-color: white;
 }
 
 /* .movie-content {
